<resources>

    <!-- Main Activity -->
    <string name="app_name">ByteWrite</string>
    <string name="action_settings">Settings</string>
    <string name="image_desc">image which is to be processed for OCR</string>
    <string name="cameraButton">Launch Camera</string>
    <string name="welcomeMessage">Take a picture to get started!</string>
    <string name="processButton">Process</string>
    <string name="retakeButton">Retake</string>
    <string name="sampleButton">Load Samples</string>
    <string name="sampleDescription">a character from our sample base</string>

    <!--Process Activity-->
    <string name="title_activity_process">Process</string>
    <string name="segmentButton">Segment</string>
    <string name="precisionButton">Precision Segment</string>
    <string name="loadingCharBase">Loading Character Base...</string>
</resources>
