<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:contentDescription="@string/image_desc" />

    <Button
        android:onClick="launchImageCaptureIntent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cameraButton"
        android:id="@+id/button"
        android:layout_marginBottom="120dp"
        android:width="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcomeMessage"
        android:id="@+id/textView"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp" />

    <Button
        android:onClick="launchImageCaptureIntent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retakeButton"
        android:id="@+id/retakeButton"
        android:width="150dp"
        android:layout_above="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:onClick="process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/processButton"
        android:id="@+id/processButton"
        android:width="150dp"
        android:layout_alignTop="@+id/retakeButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
