<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/background_dark"
    tools:context="fedffm.bytewrite.ProcessActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageViewProcess"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image_desc" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/imageViewProcess">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageGallery"
            android:gravity="center"
            android:layout_gravity="center"/>
    </HorizontalScrollView>

    <Button
        android:background="@android:color/background_light"
        android:onClick="segment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/segmentButton"
        android:id="@+id/segmentButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp" />

    <Button
        android:background="@android:color/background_light"
        android:onClick="precisionSegment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precisionButton"
        android:id="@+id/precisionButton"
        android:layout_alignTop="@+id/segmentButton"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
